@@ -24,8 +24,8 @@ requires 'Readonly' => 0;
 requires 'perl' => '5.6.2';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Pod-Example';
-resources 'homepage' => 'https://github.com/tupinek/Pod-Example';
-resources 'repository' => 'git://github.com/tupinek/Pod-Example';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Pod-Example';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Pod-Example';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.05;
 test_requires 'Test::More' => 0;
