@@ -71,7 +71,7 @@ SEE ALSO
         Base class for pod-example script.
 
 REPOSITORY
-    <https://github.com/tupinek/Pod-Example>
+    <https://github.com/michal-josef-spacek/Pod-Example>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
