@@ -4,6 +4,7 @@
  - Remove trivial comments.
  - Update Module::Install readme_from.
  - Update Module::Install to 1.19 version.
+ - Update author github username.
  - Update author name.
  - Update copyright years.
 
